--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="icon" type="image/x-icon" href="img/site-icon.png">
 
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XV1D7JDHYM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XV1D7JDHYM');
+</script>
 <body>
   <div class="tm-container">
     <div class="tm-row">
