--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-x-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">X</a>
+                    <p class="tm-list-item-description"><a href="https://x.com/gabbi_exotiqfox" rel="nofollow" target="_parent">X</a>
                       For announcements, memes, comments, discussions, porn, NSFW art appreciation...
                     </p>
                   </div>
@@ -95,7 +95,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-ig-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">Instagram</a>
+                    <p class="tm-list-item-description"><a href="https://www.instagram.com/exotiqfox/" rel="nofollow" target="_parent">Instagram</a>
                       For daily life updates and funny SFW reels
                     </p>
                   </div>
@@ -103,7 +103,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-yt-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">Youtube</a>
+                    <p class="tm-list-item-description"><a href="https://www.youtube.com/@ExotiqFox" rel="nofollow" target="_parent">Youtube</a>
                       For SFW gaming... if you're out in public and you miss looking at my face and listening to my sweet voice and tasteful screams
                     </p>
                   </div>
@@ -111,7 +111,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-fet-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">FetLife</a>
+                    <p class="tm-list-item-description"><a href="https://fetlife.com/users/16815103" rel="nofollow" target="_parent">FetLife</a>
                       For my NSFW blog, kinky journals, erotica reading, free nudes, wank material, body appreciation, sensual art
                     </p>
                   </div>
@@ -126,7 +126,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-fan-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">Fansly</a>
+                    <p class="tm-list-item-description"><a href="https://fans.ly/r/exotiqfox" rel="nofollow" target="_parent">Fansly</a>
                       You can find most of my content here, even the stuff that Pornhub, xham, xfree removed or rejected!
                     </p>
                   </div>
@@ -134,7 +134,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-ham-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">XHamster</a>
+                    <p class="tm-list-item-description"><a href="https://xhamster.com/users/exotiqfoxjoi/videos" rel="nofollow" target="_parent">XHamster</a>
                       For some fun JOI vids, edging challenges, fap hero, cockhero, porn reactions
                     </p>
                   </div>
@@ -142,7 +142,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-hub-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">PornHub</a>
+                    <p class="tm-list-item-description"><a href="https://www.pornhub.com/model/exotiqfox-joi" rel="nofollow" target="_parent">PornHub</a>
                       For some fun JOI vids, edging challenges, fap hero, cockhero, porn reactions same stuff as XHam, just a back up site in case the other one gets deleted
                     </p>
                   </div>
@@ -150,7 +150,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-r34-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">Rule34</a>
+                    <p class="tm-list-item-description"><a href="https://rule34video.com/members/1431680/" rel="nofollow" target="_parent">Rule34</a>
                       If you wanna watch the stuff I'm gooning to on and off cam 😉, check out my playlists there
                     </p>
                   </div>
@@ -158,7 +158,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-shop-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">ExotiqFox Store</a>
+                    <p class="tm-list-item-description"><a href="https://darknesscolorproject.com/shop/ols/categories/exotiqfox" rel="nofollow" target="_parent">ExotiqFox Store</a>
                       Some pre-made special vids that aren't on Fansly or anywhere else. Most are roleplay JOI.
                     </p>
                   </div>
@@ -166,7 +166,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-mv-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">Manyvids</a>
+                    <p class="tm-list-item-description"><a href="https://www.manyvids.com/Profile/1007984782/exotiqfox/Store/Items" rel="nofollow" target="_parent">Manyvids</a>
                       Gonna add more stuff here, including the full length goon sessions and cock hero, and edging challenges. ALSO, the vids are all UNCENSORED, yes even the dangerous parts in Fansly 😉
                     </p>
                   </div>
@@ -174,7 +174,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-xfree-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.tooplate.com/contact" rel="nofollow" target="_parent">XFreeHD</a>
+                    <p class="tm-list-item-description"><a href="https://www.xfreehd.com/user/ExotiqFox" rel="nofollow" target="_parent">XFreeHD</a>
                       I upload most of my porn reactions here, even the uncensored stuff 🦊
                     </p>
                   </div>
@@ -191,7 +191,7 @@
                   <div class="tm-black-bg tm-list-item-text">
                     <p class="tm-list-item-description">🥂 SLUTTIVERSARY PROMO | Use the <a href="https://fans.ly/subscriptions/giftcode/NjkzMTMwNDEzMzQxNjc5NjE4OjE6MTpjZjE1MmIxZTA5">gift link</a> to get 50% OFF on my Fansly My Guy 💜 tier.
                     </p>
-                    <p><i>Available from Nov 1, 2024 to Nov 30, 2024</i></p>
+                    <p><i>Will be available from Nov 1, 2024 to Nov 30, 2024</i></p>
                   </div>
                 </div>
                 <div class="tm-list-item">          
