--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                   <h2 class="tm-text-primary">The meaning behind ExotiqFox</h2>
                   <p>Nothing really deep, I just wrote this piece of lore when I was taking foxy pics. Then I thought, hey ExotiqFox kinda sounds good 🤷‍♀️</p> 
                   <q>Finally, we have the Pink-Tailed Filipina Fox Vulpes fucctoi ! A rare treasure from the oriental regions. The only one of her kind remaining. This little critter appears only once in a full moon and when the stars align into the shape of a great phallus. That is the time when she seeks a mate because her only purpose in life is to breed. To take someone’s seed and make babies of her own. Careful, she is an aggressive one who uses her sharp claws to fend against predators. Only the right dominant master can domesticate her to be a sweet obedient submissive pet.</q>
-                  <p></p><img src="img/exotiqfox.PNG" alt="Image">            
+                  <p></p><img style="width: 100%" src="img/exotiqfox.PNG" alt="Image">            
                 </div>    
                          
                                 
