--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <div class="tm-list-item">          
                   <img src="img/1-x-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://x.com/gabbi_exotiqfox" rel="nofollow" target="_parent">X</a>
-                      For announcements, memes, comments, discussions, porn, NSFW art appreciation...
+                    <p class="tm-list-item-description"><a href="https://bsky.app/profile/exotiqfox.bsky.social" rel="nofollow" target="_parent">BlueSky</a>
+                      Cause X blocked me, let me try this other twitter clone, follow me here for announcements, memes, comments, discussions, porn, NSFW art appreciation...
                     </p>
                   </div>
                 </div>
