--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div id="cold" class="tm-tab-content">
               <div class="tm-list">
                 <div class="tm-list-item">          
-                  <img src="img/1-x-logo.png" alt="Image" class="tm-list-item-img">
+                  <img src="img/1-bsky-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <p class="tm-list-item-description"><a href="https://bsky.app/profile/exotiqfox.bsky.social" rel="nofollow" target="_parent">BlueSky</a>
                       Cause X blocked me, let me try this other twitter clone, follow me here for announcements, memes, comments, discussions, porn, NSFW art appreciation...
@@ -105,6 +105,14 @@
                   <div class="tm-black-bg tm-list-item-text">
                     <p class="tm-list-item-description"><a href="https://www.youtube.com/@ExotiqFox" rel="nofollow" target="_parent">Youtube</a>
                       For SFW gaming... if you're out in public and you miss looking at my face and listening to my sweet voice and tasteful screams
+                    </p>
+                  </div>
+                </div>
+                  <div class="tm-list-item">          
+                  <img src="img/1-red-logo.png" alt="Image" class="tm-list-item-img">
+                  <div class="tm-black-bg tm-list-item-text">
+                    <p class="tm-list-item-description"><a href="https://www.reddit.com/user/ExotiqFox1/" rel="nofollow" target="_parent">Reddit</a>
+                      Idk... I also make announcements here and maybe talk about edging or gooning in some subs. I also share some Rule 34 stuff that I like from my subreddits.
                     </p>
                   </div>
                 </div>
