--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <img src="img/1-red-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <p class="tm-list-item-description"><a href="https://www.reddit.com/user/ExotiqFox1/" rel="nofollow" target="_parent">Reddit</a>
-                      Idk... I also make announcements here and maybe talk about edging or gooning in some subs. I also share some Rule 34 stuff that I like from my subreddits.
+                      Idk... I also make announcements here and maybe talk about edging or gooning in some subs. I also share some Rule 34 stuff that I like from the subreddits I'm a part of.
                     </p>
                   </div>
                 </div>
