--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
           
           <div id="drink" class="tm-page-content">
             <!-- Drink Menu Page -->
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1012035413?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A little snippet of the stuff going on in my YT channel"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-            <nav class="tm-black-bg tm-drinks-nav">
+            <div id="player-overlay">
+                    <video controls class="site-vid">
+                        <source src="video/yt_channel_trailer" />
+                    </video>    
+                </div>
+              <nav class="tm-black-bg tm-drinks-nav">
               <ul>
                 <li>
                   <a href="#" class="tm-tab-link active" data-id="cold">Follow Me</a>
@@ -227,8 +231,12 @@
               <div class="tm-list-item tm-list-item-2"> 
                                
                 <div class="tm-list-item-text-2">
-                  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1010906002?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Exotiqfox Intro"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-                  <p></p>
+                  <div id="player-overlay">
+                    <video controls class="site-vid">
+                        <source src="video/exotiqfox_who_2.mp4" />
+                    </video>    
+                </div>
+                    <p></p>
                   <p>Heya, call me Gabbi. I like to tell men how to jerk off, also women. I'm a bisexual switch 👩‍❤️‍💋‍👩👩‍❤️‍👨 meaning I'm attracted to both guys and girls AND I can be dominant and submissive.</p>
 
 <p>I post YouTube vlog/ commentary style content, so long videos baby 🤘 and a little short stuff and slutty pics just on the side. I like being funny, and just being my cute bubbly self in my content.</p>
