--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
           <div id="drink" class="tm-page-content">
             <!-- Drink Menu Page -->
             <div id="player-overlay">
-                    <video controls class="site-vid">
-                        <source src="video/yt_channel_trailer" />
-                    </video>    
-                </div>
+              <video controls class="site-vid">
+                  <source src="video/yt_channel_trailer.mp4" />
+              </video>    
+          </div>
               <nav class="tm-black-bg tm-drinks-nav">
               <ul>
                 <li>
