--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
                 <div class="tm-list-item">          
                   <img src="img/1-hub-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.pornhub.com/model/exotiqfox-joi" rel="nofollow" target="_parent">PornHub</a>
-                      For some fun JOI vids, edging challenges, fap hero, cockhero, porn reactions same stuff as XHam, just a back up site in case the other one gets deleted
-                    </p>
+                    <p class="tm-list-item-description">PornHub | Removed again, I give up on this platform :( Try my other sites instead.</p>
                   </div>
                 </div>
                 <div class="tm-list-item">          
