--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <div id="cold" class="tm-tab-content">
               <div class="tm-list">
                 <div class="tm-list-item">          
-                  <img src="img/1-bsky-logo.png" alt="Image" class="tm-list-item-img">
+                  <img src="img/1-x-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://bsky.app/profile/exotiqfox.bsky.social" rel="nofollow" target="_parent">BlueSky</a>
-                      Cause X blocked me, let me try this other twitter clone, follow me here for announcements, memes, comments, discussions, porn, NSFW art appreciation...
+                    <p class="tm-list-item-description"><a href="https://twitter.com/ExotiqFoxGabbi" rel="nofollow" target="_parent">X</a>
+                      I'm back on Twitter! I refuse to call it X... Follow me here for announcements, memes, comments, discussions, porn, NSFW art appreciation...
                     </p>
                   </div>
                 </div>
