--- a/index.html
+++ b/index.html
@@ -67,11 +67,15 @@
           
           <div id="drink" class="tm-page-content">
             <!-- Drink Menu Page -->
+            <!--
                         <div id="player-overlay">
               <video controls class="site-vid">
                   <source src="video/yt_channel_trailer.mp4" />
               </video>    
           </div>
+
+              -->
+                <img alt="Image" class="tm-header-image" src="img/site-banner-10-19.png">
               <nav class="tm-black-bg tm-drinks-nav">
               <ul>
                 <li>
