--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                   <div class="tm-list-item">          
                   <img src="img/1-yt-logo.png" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
-                    <p class="tm-list-item-description"><a href="https://www.youtube.com/@ExotiqFox" rel="nofollow" target="_parent">Youtube</a>
+                    <p class="tm-list-item-description"><a href="https://www.youtube.com/@GabbiReacts" rel="nofollow" target="_parent">Youtube</a>
                       For SFW gaming... if you're out in public and you miss looking at my face and listening to my sweet voice and tasteful screams
                     </p>
                   </div>
